@@ -11,7 +11,7 @@ the possibility of breakage from importing a dodgy module
 a function might not use.
 """
 
-__revision__ = '$Id: Error.py,v 1.16 2005/01/27 22:24:34 port001 Exp $'
+__revision__ = '$Id: Error.py,v 1.17 2005/02/17 01:19:11 port001 Exp $'
 __modulename__ = 'Error'
 
 def error_uncaught(req):
@@ -184,6 +184,7 @@ def error_user(title, description):
 
     import Config
     from Template import Template
+    from GLSRException import ProgrammingError
 
     if str(title) == '':
         raise ProgrammingError('Zero length error title',
