@@ -3,16 +3,16 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: Page_Script.py,v 1.13 2005/01/27 04:19:15 port001 Exp $
-#
+
+__revision__ = '$Id: Page_Script.py,v 1.14 2005/02/17 01:19:11 port001 Exp $'
+__modulename__ = 'Page_Script'
 
 import Config
 from Category import Category
 from Language import Language
-from Script import Script, SubScript
 from SiteModule import SiteModule
-
-__modulename__ = 'Page_Script'
+from GLSRException import Redirect
+from Script import Script, SubScript
 
 class Page_Script(SiteModule):
 
