@@ -2,12 +2,15 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.51 2005/01/27 22:24:34 port001 Exp $
+# $Id: ChangeLog,v 1.52 2005/02/17 01:19:11 port001 Exp $
 
 CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                 work with the new SiteModule backend. Note: some of the
                 templates appear have been broken prior to the SiteModule
                 rewrite, but somehow worked. 
+
+17 Feb 2005; Ian Leitch <port001@gentoo.org>:
+ * Added an option to restrict logins to a single IP
 
 27 Jan 2005; Ian Leitch <port001@gentoo.org>:
  * Added a ProgrammingError exception
